Add Domb's paper

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: b465d289a58a3ecc7df29102a23ebfb0e3451414
+% Commit: 3403506688d77384969b2954bfce28e143e4497e
 % Date: 2023-08-06
 % ---------------------------
 
@@ -3122,24 +3122,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {The stochastic wave equation with fractional noise: a
-		  random field approach},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {120},
-  year		= {2010},
-  number	= {12},
-  pages		= {2468--2494},
-  issn		= {0304-4149},
-  mrclass	= {60H15 (60G60 60H05)},
-  mrnumber	= {2728174},
-  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
-  doi		= {10.1016/j.spa.2010.08.006},
-  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {Stochastic heat equation with multiplicative
 		  fractional-colored noise},
   journal	= {J. Theoret. Probab.},
@@ -3154,6 +3136,24 @@
   mrreviewer	= {David Nualart},
   doi		= {10.1007/s10959-009-0237-3},
   url		= {https://doi.org/10.1007/s10959-009-0237-3}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {The stochastic wave equation with fractional noise: a
+		  random field approach},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {120},
+  year		= {2010},
+  number	= {12},
+  pages		= {2468--2494},
+  issn		= {0304-4149},
+  mrclass	= {60H15 (60G60 60H05)},
+  mrnumber	= {2728174},
+  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
+  doi		= {10.1016/j.spa.2010.08.006},
+  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 
 @Article{	  balan.yuan:22:spatial,
@@ -10992,6 +10992,22 @@
 
 @Article{	  carmona.nualart:88:random,
   author	= {Carmona, Ren\'{e} and Nualart, David},
+  title		= {Random nonlinear wave equations: propagation of
+		  singularities},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {16},
+  year		= {1988},
+  number	= {2},
+  pages		= {730--751},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {929075},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
+}
+
+@Article{	  carmona.nualart:88:random*1,
+  author	= {Carmona, Ren\'{e} and Nualart, David},
   title		= {Random nonlinear wave equations: smoothness of the
 		  solutions},
   journal	= {Probab. Theory Related Fields},
@@ -11006,22 +11022,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00318783},
   url		= {https://doi.org/10.1007/BF00318783}
-}
-
-@Article{	  carmona.nualart:88:random*1,
-  author	= {Carmona, Ren\'{e} and Nualart, David},
-  title		= {Random nonlinear wave equations: propagation of
-		  singularities},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {16},
-  year		= {1988},
-  number	= {2},
-  pages		= {730--751},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35L05 35R60)},
-  mrnumber	= {929075},
-  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 
 @Book{		  carmona.nualart:90:nonlinear,
@@ -15376,17 +15376,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -15402,6 +15391,17 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -18666,23 +18666,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18698,6 +18681,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -18886,6 +18886,25 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -18900,25 +18919,6 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -20515,6 +20515,21 @@
   url		= {http://www.numdam.org/item?id=ASNSP_1998_4_26_4_663_0}
 }
 
+@Article{	  domb.joyce:72:cluster,
+  doi		= {10.1088/0022-3719/5/9/009},
+  url		= {https://dx.doi.org/10.1088/0022-3719/5/9/009},
+  year		= {1972},
+  month		= {may},
+  publisher	= {},
+  volume	= {5},
+  number	= {9},
+  pages		= {956},
+  author	= {C Domb and G S Joyce},
+  title		= {Cluster expansion for a polymer chain},
+  journal	= {J. Phys. C: Solid State Phys.},
+  fjournal	= {Journal of Physics C: Solid State Physics}
+}
+
 @Article{	  donati-martin.nualart:94:markov,
   author	= {Donati-Martin, C. and Nualart, D.},
   title		= {Markov property for elliptic stochastic partial
@@ -21227,21 +21242,6 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -21254,6 +21254,21 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -33981,25 +33996,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by space and time correlated noise},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal	= {Stochastic Partial Differential Equations. Analysis and
-		  Computations},
-  volume	= {5},
-  year		= {2017},
-  number	= {4},
-  pages		= {614--651},
-  issn		= {2194-0401},
-  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber	= {3736656},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1007/s40072-017-0099-0},
-  url		= {https://doi.org/10.1007/s40072-017-0099-0}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by spatially correlated noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
@@ -34014,6 +34010,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1214/16-AIHP756},
   url		= {https://doi.org/10.1214/16-AIHP756}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by space and time correlated noise},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {614--651},
+  issn		= {2194-0401},
+  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber	= {3736656},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1007/s40072-017-0099-0},
+  url		= {https://doi.org/10.1007/s40072-017-0099-0}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -48324,21 +48339,6 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -48354,6 +48354,21 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -57936,22 +57951,6 @@
 
 @Article{	  talagrand:06:parisi,
   author	= {Talagrand, Michel},
-  title		= {Parisi measures},
-  journal	= {J. Funct. Anal.},
-  fjournal	= {Journal of Functional Analysis},
-  volume	= {231},
-  year		= {2006},
-  number	= {2},
-  pages		= {269--286},
-  issn		= {0022-1236},
-  mrclass	= {82B44 (28A33 82D30)},
-  mrnumber	= {2195333},
-  doi		= {10.1016/j.jfa.2005.03.001},
-  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-
-@Article{	  talagrand:06:parisi*1,
-  author	= {Talagrand, Michel},
   title		= {The {P}arisi formula},
   journal	= {Ann. of Math. (2)},
   fjournal	= {Annals of Mathematics. Second Series},
@@ -57965,6 +57964,22 @@
   mrreviewer	= {Fran\c{c}ois Germinet},
   doi		= {10.4007/annals.2006.163.221},
   url		= {https://doi.org/10.4007/annals.2006.163.221}
+}
+
+@Article{	  talagrand:06:parisi*1,
+  author	= {Talagrand, Michel},
+  title		= {Parisi measures},
+  journal	= {J. Funct. Anal.},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {231},
+  year		= {2006},
+  number	= {2},
+  pages		= {269--286},
+  issn		= {0022-1236},
+  mrclass	= {82B44 (28A33 82D30)},
+  mrnumber	= {2195333},
+  doi		= {10.1016/j.jfa.2005.03.001},
+  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 
 @Article{	  talagrand:10:construction,
@@ -57987,6 +58002,24 @@
 
 @Book{		  talagrand:11:mean,
   author	= {Talagrand, Michel},
+  title		= {Mean field models for spin glasses. {V}olume {II}},
+  series	= {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3.
+		  Folge. A Series of Modern Surveys in Mathematics [Results
+		  in Mathematics and Related Areas. 3rd Series. A Series of
+		  Modern Surveys in Mathematics]},
+  volume	= {55},
+  note		= {Advanced replica-symmetry and low temperature},
+  publisher	= {Springer, Heidelberg},
+  year		= {2011},
+  pages		= {xii+629},
+  isbn		= {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass	= {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber	= {3024566},
+  mrreviewer	= {Francis Comets}
+}
+
+@Book{		  talagrand:11:mean*1,
+  author	= {Talagrand, Michel},
   title		= {Mean field models for spin glasses. {V}olume {I}},
   series	= {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3.
 		  Folge. A Series of Modern Surveys in Mathematics [Results
@@ -58003,24 +58036,6 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/978-3-642-15202-3},
   url		= {https://doi.org/10.1007/978-3-642-15202-3}
-}
-
-@Book{		  talagrand:11:mean*1,
-  author	= {Talagrand, Michel},
-  title		= {Mean field models for spin glasses. {V}olume {II}},
-  series	= {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3.
-		  Folge. A Series of Modern Surveys in Mathematics [Results
-		  in Mathematics and Related Areas. 3rd Series. A Series of
-		  Modern Surveys in Mathematics]},
-  volume	= {55},
-  note		= {Advanced replica-symmetry and low temperature},
-  publisher	= {Springer, Heidelberg},
-  year		= {2011},
-  pages		= {xii+629},
-  isbn		= {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass	= {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber	= {3024566},
-  mrreviewer	= {Francis Comets}
 }
 
 @Article{	  talagrand:94:sharper,
@@ -59176,6 +59191,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -59190,23 +59222,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
