Add two of my own papers that just appeared on MathScinet

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 632184ee69d1543912368b629063c14b3712da8b
+% Commit: baa00e61f84847ddadd20dcd8fd8ed2436779ab0
 % Date: 2023-08-16
 % ---------------------------
 
@@ -12767,6 +12767,24 @@
   url		= {http://arXiv.org/abs/2209.04771}
 }
 
+@Article{	  chen.eisenberg:23:interpolating,
+  author	= {Chen, Le and Eisenberg, Nicholas},
+  title		= {Interpolating the stochastic heat and wave equations with
+		  time-independent noise: solvability and exact asymptotics},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {11},
+  year		= {2023},
+  number	= {3},
+  pages		= {1203--1253},
+  issn		= {2194-0401},
+  mrclass	= {60H15 (35R11 37H15 60H07)},
+  mrnumber	= {4624137},
+  doi		= {10.1007/s40072-022-00258-6},
+  url		= {https://doi.org/10.1007/s40072-022-00258-6}
+}
+
 @Article{	  chen.eriksen.ea:95:largest,
   author	= {Chen, Yang and Eriksen, Kasper J. and Tracy, Craig A.},
   title		= {Largest eigenvalue distribution in the double scaling
@@ -13189,6 +13207,22 @@
   journal	= {Proc. Amer. Math. Soc. (in press)},
   fjournal	= {Proceedings of the American Mathematical Society},
   url		= {http://arXiv.org/abs/2208.03853}
+}
+
+@Article{	  chen.huang:23:superlinear,
+  author	= {Chen, Le and Huang, Jingyu},
+  title		= {Superlinear stochastic heat equation on {$\Bbb{R}^d$}},
+  journal	= {Proc. Amer. Math. Soc.},
+  fjournal	= {Proceedings of the American Mathematical Society},
+  volume	= {151},
+  year		= {2023},
+  number	= {9},
+  pages		= {4063--4078},
+  issn		= {0002-9939},
+  mrclass	= {60H15 (35K57 35R60)},
+  mrnumber	= {4607649},
+  doi		= {10.1090/proc/16436},
+  url		= {https://doi.org/10.1090/proc/16436}
 }
 
 @Article{	  chen.khoshnevisan.ea:16:decorrelation,
