--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: edb82a481c399d1fb5af5927ebb128f809768f05
+% Commit: aa882d21a240a54987791f3f077f9f3808ee0aad
 % Date: 2023-08-18
 % ---------------------------
 
@@ -1403,6 +1403,7 @@
   title		= {Absence of Diffusion in Certain Random Lattices},
   author	= {Anderson, P. W.},
   journal	= {Phys. Rev.},
+  fjournal	= {Physical Review},
   volume	= {109},
   issue		= {5},
   pages		= {1492--1505},
@@ -6730,7 +6731,8 @@
   title		= {H{\"o}lder continuity of mild solutions of space-time
 		  fractional stochastic heat equation driven by colored
 		  noise},
-  journal	= {The European Physical Journal Plus},
+  fjournal	= {The European Physical Journal Plus},
+  journal	= {Eur. Phys. J. Plus},
   year		= {2021},
   month		= {Sep},
   day		= {13},
@@ -6869,10 +6871,11 @@
 @Article{	  biswas.cherayil:95:dynamics,
   author	= {Biswas, Parbati and Cherayil, Binny J.},
   title		= {Dynamics of Fractional Brownian Walks},
-  journal	= {The Journal of Physical Chemistry},
+  fjournal	= {The Journal of Physical Chemistry},
+  journal	= {J. Phys. Chem.},
   volume	= {99},
   number	= {2},
-  pages		= {816-821},
+  pages		= {816--821},
   year		= {1995},
   doi		= {10.1021/j100002a052},
   url		= {https://doi.org/10.1021/j100002a052},
@@ -8788,10 +8791,11 @@
 @Article{	  brunet.derrida:00:ground,
   title		= {Ground state energy of a non-integer number of particles
 		  with δ attractive interactions},
-  journal	= {Physica A: Statistical Mechanics and its Applications},
+  journal	= {Phys. A: Stat. Mech. Appl.},
+  fjournal	= {Physica A: Statistical Mechanics and its Applications},
   volume	= {279},
   number	= {1},
-  pages		= {398-407},
+  pages		= {398--407},
   year		= {2000},
   issn		= {0378-4371},
   doi		= {https://doi.org/10.1016/S0378-4371(99)00526-9},
@@ -18920,25 +18924,6 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -18953,6 +18938,25 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -20568,18 +20572,17 @@
 }
 
 @Article{	  domb.joyce:72:cluster,
+  author	= {C Domb and G S Joyce},
+  title		= {Cluster expansion for a polymer chain},
+  journal	= {J. Phys. C: Solid State Phys.},
+  fjournal	= {Journal of Physics C: Solid State Physics},
   doi		= {10.1088/0022-3719/5/9/009},
   url		= {https://dx.doi.org/10.1088/0022-3719/5/9/009},
   year		= {1972},
   month		= {may},
-  publisher	= {},
   volume	= {5},
   number	= {9},
-  pages		= {956},
-  author	= {C Domb and G S Joyce},
-  title		= {Cluster expansion for a polymer chain},
-  journal	= {J. Phys. C: Solid State Phys.},
-  fjournal	= {Journal of Physics C: Solid State Physics}
+  pages		= {956}
 }
 
 @Article{	  donati-martin.nualart:94:markov,
@@ -23594,10 +23597,11 @@
 @Article{	  fernandez-bonder.groisman:09:time–space,
   title		= {Time–space white noise eliminates global solutions in
 		  reaction–diffusion equations},
-  journal	= {Physica D: Nonlinear Phenomena},
+  fjournal	= {Physica D: Nonlinear Phenomena},
+  journal	= {Phys. D: Nonlinear Phenom.},
   volume	= {238},
   number	= {2},
-  pages		= {209-215},
+  pages		= {209--215},
   year		= {2009},
   issn		= {0167-2789},
   doi		= {https://doi.org/10.1016/j.physd.2008.09.005},
@@ -30121,18 +30125,19 @@
 }
 
 @Article{	  halpin-healy.zhang:95:kinetic,
+  author	= {Timothy Halpin-Healy and Yi-Cheng Zhang},
   title		= {Kinetic roughening phenomena, stochastic growth, directed
 		  polymers and all that. Aspects of multidisciplinary
 		  statistical mechanics},
-  journal	= {Physics Reports},
+  journal	= {Phys. Rep.},
+  fjournal	= {Physics Reports},
   volume	= {254},
   number	= {4},
   pages		= {215--414},
   year		= {1995},
   issn		= {0370-1573},
   doi		= {https://doi.org/10.1016/0370-1573(94)00087-J},
-  url		= {https://www.sciencedirect.com/science/article/pii/037015739400087J},
-  author	= {Timothy Halpin-Healy and Yi-Cheng Zhang}
+  url		= {https://www.sciencedirect.com/science/article/pii/037015739400087J}
 }
 
 @Article{	  halsey.honda.ea:96:multifractal,
@@ -30262,6 +30267,7 @@
 @Article{	  handcock.stein:93:bayesian,
   title		= {A Bayesian analysis of kriging},
   author	= {Handcock, Mark S and Stein, Michael L},
+  fjournal	= {Technometrics},
   journal	= {Technometrics},
   volume	= {35},
   number	= {4},
@@ -30287,25 +30293,7 @@
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
 
-@Article{	  hara.slade:00:scaling,
-  author	= {Hara, Takashi and Slade, Gordon},
-  title		= {The scaling limit of the incipient infinite cluster in
-		  high-dimensional percolation. {I}. {C}ritical exponents},
-  journal	= {J. Statist. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {99},
-  year		= {2000},
-  number	= {5-6},
-  pages		= {1075--1168},
-  issn		= {0022-4715},
-  mrclass	= {82B43 (60K35)},
-  mrnumber	= {1773141},
-  mrreviewer	= {Remco van der Hofstad},
-  doi		= {10.1023/A:1018628503898},
-  url		= {https://doi.org/10.1023/A:1018628503898}
-}
-
-@InCollection{	  hara.slade:00:scaling*1,
+@InCollection{	  hara.slade:00:scaling,
   author	= {Hara, Takashi and Slade, Gordon},
   title		= {The scaling limit of the incipient infinite cluster in
 		  high-dimensional percolation. {II}. {I}ntegrated
@@ -30324,6 +30312,24 @@
   mrreviewer	= {Remco van der Hofstad},
   doi		= {10.1063/1.533186},
   url		= {https://doi.org/10.1063/1.533186}
+}
+
+@Article{	  hara.slade:00:scaling*1,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
 }
 
 @Article{	  hara.slade:91:critical,
@@ -31069,7 +31075,8 @@
 @Article{	  hoessly.wiuf.ea:22:on,
   title		= {On the sum of chemical reactions},
   doi		= {10.1017/S0956792522000146},
-  journal	= {European Journal of Applied Mathematics},
+  journal	= {Eur. J. Appl. Math.},
+  fjournal	= {European Journal of Applied Mathematics},
   publisher	= {Cambridge University Press},
   author	= {Hoessly, Linard and Wiuf, Carsten and Xia, Panqiu},
   year		= {2022},
@@ -34223,6 +34230,7 @@
 		  Due to Random Impurities},
   author	= {Huse, David A. and Henley, Christopher L.},
   journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
   volume	= {54},
   issue		= {25},
   pages		= {2708--2711},
@@ -34468,7 +34476,7 @@
   fjournal	= {Journal of the Physical Society of Japan},
   volume	= {61},
   number	= {5},
-  pages		= {1445-1448},
+  pages		= {1445--1448},
   year		= {1992},
   doi		= {10.1143/JPSJ.61.1445},
   url		= {https://doi.org/10.1143/JPSJ.61.1445},
@@ -35873,6 +35881,7 @@
 		  Weber, Ferenc},
   title		= {Self-affine rupture lines in paper sheets},
   journal	= {Fractals},
+  fjournal	= {Fractals},
   volume	= {01},
   number	= {01},
   pages		= {67--74},
@@ -38940,10 +38949,11 @@
   author	= {Lagendijk, Ad and Tiggelen, Bart van and Wiersma, Diederik
 		  S.},
   title		= {Fifty years of Anderson localization},
-  journal	= {Physics Today},
+  journal	= {Phys. Today},
+  fjournal	= {Physics Today},
   volume	= {62},
   number	= {8},
-  pages		= {24-29},
+  pages		= {24--29},
   year		= {2009},
   month		= {08},
   issn		= {0031-9228},
@@ -42547,16 +42557,17 @@
 }
 
 @Article{	  meakin.jullien:89:spatially,
+  author	= {P. Meakin and R. Jullien},
+  title		= {Spatially Correlated Ballistic Deposition},
+  journal	= {Europhysics Letters},
+  fjournal	= {Europhysics Letters},
   doi		= {10.1209/0295-5075/9/1/013},
   url		= {https://dx.doi.org/10.1209/0295-5075/9/1/013},
   year		= {1989},
   month		= {may},
   volume	= {9},
   number	= {1},
-  pages		= {71},
-  author	= {P. Meakin and R. Jullien},
-  title		= {Spatially Correlated Ballistic Deposition},
-  journal	= {Europhysics Letters}
+  pages		= {71}
 }
 
 @Article{	  meakin.jullien:90:spatially,
@@ -51754,7 +51765,22 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@Article{	  perkins:82:local,
+@InCollection{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
+}
+
+@Article{	  perkins:82:local*1,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -51770,21 +51796,6 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
-}
-
-@InCollection{	  perkins:82:local*1,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -57949,7 +57960,8 @@
 		  scale invariance},
   author	= {Takeuchi, Kazumasa A and Sano, Masaki and Sasamoto,
 		  Tomohiro and Spohn, Herbert},
-  journal	= {Scientific reports},
+  journal	= {Sci. Rep.},
+  fjournal	= {Scientific Reports},
   volume	= {1},
   number	= {1},
   pages		= {1--5},
@@ -58029,22 +58041,6 @@
 
 @Article{	  talagrand:06:parisi,
   author	= {Talagrand, Michel},
-  title		= {Parisi measures},
-  journal	= {J. Funct. Anal.},
-  fjournal	= {Journal of Functional Analysis},
-  volume	= {231},
-  year		= {2006},
-  number	= {2},
-  pages		= {269--286},
-  issn		= {0022-1236},
-  mrclass	= {82B44 (28A33 82D30)},
-  mrnumber	= {2195333},
-  doi		= {10.1016/j.jfa.2005.03.001},
-  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-
-@Article{	  talagrand:06:parisi*1,
-  author	= {Talagrand, Michel},
   title		= {The {P}arisi formula},
   journal	= {Ann. of Math. (2)},
   fjournal	= {Annals of Mathematics. Second Series},
@@ -58058,6 +58054,22 @@
   mrreviewer	= {Fran\c{c}ois Germinet},
   doi		= {10.4007/annals.2006.163.221},
   url		= {https://doi.org/10.4007/annals.2006.163.221}
+}
+
+@Article{	  talagrand:06:parisi*1,
+  author	= {Talagrand, Michel},
+  title		= {Parisi measures},
+  journal	= {J. Funct. Anal.},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {231},
+  year		= {2006},
+  number	= {2},
+  pages		= {269--286},
+  issn		= {0022-1236},
+  mrclass	= {82B44 (28A33 82D30)},
+  mrnumber	= {2195333},
+  doi		= {10.1016/j.jfa.2005.03.001},
+  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 
 @Article{	  talagrand:10:construction,
@@ -58591,7 +58603,8 @@
 @Article{	  thouless:10:anderson,
   title		= {Anderson localization in the seventies and beyond},
   author	= {Thouless, David},
-  journal	= {International Journal of Modern Physics B},
+  journal	= {Int. J. Mod. Phys. B},
+  fjournal	= {International Journal of Modern Physics B},
   volume	= {24},
   number	= {12n13},
   pages		= {1507--1525},
@@ -63088,18 +63101,19 @@
 }
 
 @Article{	  zhang.zhang.ea:92:modeling,
+  author	= {Jun Zhang and Y.-C. Zhang and P. Alstrøm and M.T.
+		  Levinsen},
   title		= {Modeling forest fire by a paper-burning experiment, a
 		  realization of the interface growth mechanism},
-  journal	= {Physica A: Statistical Mechanics and its Applications},
+  journal	= {Phys. A: Stat. Mech. Appl.},
+  fjournal	= {Physica A: Statistical Mechanics and its Applications},
   volume	= {189},
   number	= {3},
   pages		= {383--389},
   year		= {1992},
   issn		= {0378-4371},
   doi		= {https://doi.org/10.1016/0378-4371(92)90050-Z},
-  url		= {https://www.sciencedirect.com/science/article/pii/037843719290050Z},
-  author	= {Jun Zhang and Y.-C. Zhang and P. Alstrøm and M.T.
-		  Levinsen}
+  url		= {https://www.sciencedirect.com/science/article/pii/037843719290050Z}
 }
 
 @Article{	  zhang.zhang:21:quadratic,
