My paper with Candil and Lee will appear at SPDE

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: aa882d21a240a54987791f3f077f9f3808ee0aad
-% Date: 2023-08-18
+% Commit: e8b415fd6f09775877b725610c41af1234cecf57
+% Date: 2023-08-21
 % ---------------------------
 
 
@@ -9946,7 +9946,8 @@
   author	= {David Candil and Le Chen and Cheuk Yin Lee},
   year		= {2023},
   month		= {January},
-  journal	= {preprint arXiv:2301.06435},
+  journal	= {preprint arXiv:2301.06435, to appear in Stoch. Partial
+		  Differ. Equ. Anal. Comput.},
   url		= {http://arXiv.org/abs/2301.06435}
 }
 
@@ -15414,17 +15415,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -15440,6 +15430,17 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -30293,7 +30294,25 @@
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
 
-@InCollection{	  hara.slade:00:scaling,
+@Article{	  hara.slade:00:scaling,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
+}
+
+@InCollection{	  hara.slade:00:scaling*1,
   author	= {Hara, Takashi and Slade, Gordon},
   title		= {The scaling limit of the incipient infinite cluster in
 		  high-dimensional percolation. {II}. {I}ntegrated
@@ -30312,24 +30331,6 @@
   mrreviewer	= {Remco van der Hofstad},
   doi		= {10.1063/1.533186},
   url		= {https://doi.org/10.1063/1.533186}
-}
-
-@Article{	  hara.slade:00:scaling*1,
-  author	= {Hara, Takashi and Slade, Gordon},
-  title		= {The scaling limit of the incipient infinite cluster in
-		  high-dimensional percolation. {I}. {C}ritical exponents},
-  journal	= {J. Statist. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {99},
-  year		= {2000},
-  number	= {5-6},
-  pages		= {1075--1168},
-  issn		= {0022-4715},
-  mrclass	= {82B43 (60K35)},
-  mrnumber	= {1773141},
-  mrreviewer	= {Remco van der Hofstad},
-  doi		= {10.1023/A:1018628503898},
-  url		= {https://doi.org/10.1023/A:1018628503898}
 }
 
 @Article{	  hara.slade:91:critical,
@@ -47474,24 +47475,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of one-dimensional {SDE}s
-		  driven by a fractional {B}rownian motion},
-  journal	= {Statist. Probab. Lett.},
-  fjournal	= {Statistics \& Probability Letters},
-  volume	= {76},
-  year		= {2006},
-  number	= {9},
-  pages		= {907--912},
-  issn		= {0167-7152},
-  mrclass	= {60G18 (60H10)},
-  mrnumber	= {2268434},
-  mrreviewer	= {Andreas Neuenkirch},
-  doi		= {10.1016/j.spl.2005.10.021},
-  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of {L}\'{e}vy processes with
 		  drift},
   journal	= {Ann. Probab.},
@@ -47506,6 +47489,24 @@
   mrreviewer	= {Tina M. Marquardt},
   doi		= {10.1214/009117905000000620},
   url		= {https://doi.org/10.1214/009117905000000620}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of one-dimensional {SDE}s
+		  driven by a fractional {B}rownian motion},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {76},
+  year		= {2006},
+  number	= {9},
+  pages		= {907--912},
+  issn		= {0167-7152},
+  mrclass	= {60G18 (60H10)},
+  mrnumber	= {2268434},
+  mrreviewer	= {Andreas Neuenkirch},
+  doi		= {10.1016/j.spl.2005.10.021},
+  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -51765,22 +51766,7 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@InCollection{	  perkins:82:local,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
-}
-
-@Article{	  perkins:82:local*1,
+@Article{	  perkins:82:local,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -51796,6 +51782,21 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
+}
+
+@InCollection{	  perkins:82:local*1,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -63224,6 +63225,23 @@
 }
 
 @Article{	  zhang:09:variational,
+  author	= {Zhang, Xicheng},
+  title		= {A variational representation for random functionals on
+		  abstract {W}iener spaces},
+  journal	= {J. Math. Kyoto Univ.},
+  fjournal	= {Journal of Mathematics of Kyoto University},
+  volume	= {49},
+  year		= {2009},
+  number	= {3},
+  pages		= {475--490},
+  issn		= {0023-608X},
+  mrclass	= {60H07 (60F10)},
+  mrnumber	= {2583599},
+  doi		= {10.1215/kjm/1260975036},
+  url		= {https://doi.org/10.1215/kjm/1260975036}
+}
+
+@Article{	  zhang:09:variational*1,
   author	= {Zhang, Tusheng},
   title		= {Variational inequalities and optimization for {M}arkov
 		  processes associated with semi-{D}irichlet forms},
@@ -63239,23 +63257,6 @@
   mrreviewer	= {Arie Leizarowitz},
   doi		= {10.1137/080737630},
   url		= {https://doi.org/10.1137/080737630}
-}
-
-@Article{	  zhang:09:variational*1,
-  author	= {Zhang, Xicheng},
-  title		= {A variational representation for random functionals on
-		  abstract {W}iener spaces},
-  journal	= {J. Math. Kyoto Univ.},
-  fjournal	= {Journal of Mathematics of Kyoto University},
-  volume	= {49},
-  year		= {2009},
-  number	= {3},
-  pages		= {475--490},
-  issn		= {0023-608X},
-  mrclass	= {60H07 (60F10)},
-  mrnumber	= {2583599},
-  doi		= {10.1215/kjm/1260975036},
-  url		= {https://doi.org/10.1215/kjm/1260975036}
 }
 
 @Article{	  zhang:10:stochastic,
