Add two preprint of mine

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 870a89155580e67f22953ffcab166df41c535f5b
+% Commit: 8200215d8753a83e9bca5b5d79191139f5396cee
 % Date: 2023-08-22
 % ---------------------------
 
@@ -13533,6 +13533,17 @@
   url		= {https://doi.org/10.1016/S0304-4149(03)00105-4}
 }
 
+@Article{	  chen.kuzgun.ea:23:on,
+  title		= {On the radius of self-repellent fractional Brownian
+		  motion},
+  author	= {Le Chen and Sefika Kuzgun and Carl Mueller and Panqiu
+		  Xia},
+  year		= {2023},
+  month		= {August},
+  journal	= {preprint arXiv:2308.10889},
+  url		= {http://arXiv.org/abs/2308.10889}
+}
+
 @Article{	  chen.li.ea:05:large,
   author	= {Chen, Xia and Li, Wenbo V. and Rosen, Jay},
   title		= {Large deviations for local times of stable processes and
@@ -13763,6 +13774,15 @@
   mrnumber	= {4414414},
   doi		= {10.1007/s10959-021-01094-5},
   url		= {https://doi.org/10.1007/s10959-021-01094-5}
+}
+
+@Article{	  chen.ouyang.ea:23:parabolic,
+  title		= {Parabolic Anderson model with colored noise on torus},
+  author	= {Le Chen and Cheng Ouyang and William Vickery},
+  year		= {2023},
+  month		= {August},
+  journal	= {preprint arXiv:2308.10802},
+  url		= {http://arXiv.org/abs/2308.10802}
 }
 
 @Article{	  chen.phan:19:free,
