Update my papers

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 600d74ea6ef529001a105c609f8eb1244d90bb19
-% Date: 2023-09-09
+% Commit: 119ec831c48eb314c4d44442501746c75fe5cf33
+% Date: 2023-09-25
 % ---------------------------
 
 
@@ -12946,7 +12946,8 @@
   author	= {Le Chen and Yuhui Guo and Jian Song},
   year		= {2022},
   month		= {June},
-  journal	= {preprint arXiv:2206.10069},
+  journal	= {preprint arXiv:2206.10069, to appear in Trans. Amer. Math.
+		  Soc.},
   url		= {https://www.arxiv.org/abs/2206.10069}
 }
 
@@ -30314,7 +30315,25 @@
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
 
-@InCollection{	  hara.slade:00:scaling,
+@Article{	  hara.slade:00:scaling,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
+}
+
+@InCollection{	  hara.slade:00:scaling*1,
   author	= {Hara, Takashi and Slade, Gordon},
   title		= {The scaling limit of the incipient infinite cluster in
 		  high-dimensional percolation. {II}. {I}ntegrated
@@ -30333,24 +30352,6 @@
   mrreviewer	= {Remco van der Hofstad},
   doi		= {10.1063/1.533186},
   url		= {https://doi.org/10.1063/1.533186}
-}
-
-@Article{	  hara.slade:00:scaling*1,
-  author	= {Hara, Takashi and Slade, Gordon},
-  title		= {The scaling limit of the incipient infinite cluster in
-		  high-dimensional percolation. {I}. {C}ritical exponents},
-  journal	= {J. Statist. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {99},
-  year		= {2000},
-  number	= {5-6},
-  pages		= {1075--1168},
-  issn		= {0022-4715},
-  mrclass	= {82B43 (60K35)},
-  mrnumber	= {1773141},
-  mrreviewer	= {Remco van der Hofstad},
-  doi		= {10.1023/A:1018628503898},
-  url		= {https://doi.org/10.1023/A:1018628503898}
 }
 
 @Article{	  hara.slade:91:critical,
@@ -47525,24 +47526,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of {L}\'{e}vy processes with
-		  drift},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {34},
-  year		= {2006},
-  number	= {3},
-  pages		= {1035--1051},
-  issn		= {0091-1798},
-  mrclass	= {60G51 (60H10)},
-  mrnumber	= {2243878},
-  mrreviewer	= {Tina M. Marquardt},
-  doi		= {10.1214/009117905000000620},
-  url		= {https://doi.org/10.1214/009117905000000620}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of one-dimensional {SDE}s
 		  driven by a fractional {B}rownian motion},
   journal	= {Statist. Probab. Lett.},
@@ -47557,6 +47540,24 @@
   mrreviewer	= {Andreas Neuenkirch},
   doi		= {10.1016/j.spl.2005.10.021},
   url		= {https://doi.org/10.1016/j.spl.2005.10.021}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of {L}\'{e}vy processes with
+		  drift},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {34},
+  year		= {2006},
+  number	= {3},
+  pages		= {1035--1051},
+  issn		= {0091-1798},
+  mrclass	= {60G51 (60H10)},
+  mrnumber	= {2243878},
+  mrreviewer	= {Tina M. Marquardt},
+  doi		= {10.1214/009117905000000620},
+  url		= {https://doi.org/10.1214/009117905000000620}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -63293,23 +63294,6 @@
 }
 
 @Article{	  zhang:09:variational,
-  author	= {Zhang, Xicheng},
-  title		= {A variational representation for random functionals on
-		  abstract {W}iener spaces},
-  journal	= {J. Math. Kyoto Univ.},
-  fjournal	= {Journal of Mathematics of Kyoto University},
-  volume	= {49},
-  year		= {2009},
-  number	= {3},
-  pages		= {475--490},
-  issn		= {0023-608X},
-  mrclass	= {60H07 (60F10)},
-  mrnumber	= {2583599},
-  doi		= {10.1215/kjm/1260975036},
-  url		= {https://doi.org/10.1215/kjm/1260975036}
-}
-
-@Article{	  zhang:09:variational*1,
   author	= {Zhang, Tusheng},
   title		= {Variational inequalities and optimization for {M}arkov
 		  processes associated with semi-{D}irichlet forms},
@@ -63325,6 +63309,23 @@
   mrreviewer	= {Arie Leizarowitz},
   doi		= {10.1137/080737630},
   url		= {https://doi.org/10.1137/080737630}
+}
+
+@Article{	  zhang:09:variational*1,
+  author	= {Zhang, Xicheng},
+  title		= {A variational representation for random functionals on
+		  abstract {W}iener spaces},
+  journal	= {J. Math. Kyoto Univ.},
+  fjournal	= {Journal of Mathematics of Kyoto University},
+  volume	= {49},
+  year		= {2009},
+  number	= {3},
+  pages		= {475--490},
+  issn		= {0023-608X},
+  mrclass	= {60H07 (60F10)},
+  mrnumber	= {2583599},
+  doi		= {10.1215/kjm/1260975036},
+  url		= {https://doi.org/10.1215/kjm/1260975036}
 }
 
 @Article{	  zhang:10:stochastic,
