Add my preprint with Mickey, Mohammud and Jingyu

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: ddd66b410e08765038c102116d6206492a1fb160
+% Commit: d251034d697c6602f0eaa19bc3da2b7a879e014d
 % Date: 2023-10-03
 % ---------------------------
 
@@ -11248,10 +11248,12 @@
   url           = {https://doi.org/10.1214/11-AOP684}
 }
 @article{chen.foondun.ea:23:global,
-  author        = {Chen, Le and Foondun, Mohammud and Huang, Jingyu and Salins, Mickey},
-  title         = {Global solution for superlinear stochastic heat equation on $\mathbb{R}^d$ under {O}sgood-type conditions},
+  title         = {Global solution for superlinear stochastic heat equation on $\mathbb{R}^d$ under Osgood-type conditions},
+  author        = {Le Chen and Mohammud Foondun and Jingyu Huang and Michael Salins},
   year          = {2023},
-  journal       = {Working progress}
+  month         = {October},
+  journal       = {preprint arXiv:2310.02153},
+  url           = {http://arXiv.org/abs/2310.02153}
 }
 @book{chen.goldstein.ea:11:normal,
   author        = {Chen, Louis H. Y. and Goldstein, Larry and Shao, Qi-Man},
